--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,16 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 1 auto;
+  display: flex;
+}
+
 header {
   height: 100px;
   padding: 8px;
