--- a/src/style.css
+++ b/src/style.css
@@ -60,3 +60,8 @@ footer {
   justify-content: center;
   align-items: center;
 }
+
+.todos-section {
+  flex: 1 1 auto;
+  border: 1px solid black;
+}
