Add text wrap to project name

--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,8 @@ header > img {
 
 .project-name {
   margin-bottom: 8px;
+  word-wrap: break-word;
+  white-space: normal;
 }
 
 .project-actions {
