Create add project button

--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,16 @@ header > img {
   padding: 8px;
 }
 
+.projects-section h2 {
+  margin-bottom: 8px;
+}
+
+.projects-section button {
+  padding: 8px 16px;
+  background-color: #0cff0c;
+  border-color: #000000;
+}
+
 .project-name {
   margin-bottom: 8px;
   word-wrap: break-word;
