--- a/src/style.css
+++ b/src/style.css
@@ -86,9 +86,11 @@ footer {
 
 .todo-item {
   border: 1px solid black;
-  width: 400px;
+  width: 350px;
   height: auto;
   padding: 16px;
+  display: flex;
+  flex-direction: column;
 }
 
 .todo-actions {
@@ -101,7 +103,14 @@ footer {
 .todo-data {
   display: flex;
   gap: 16px;
-  margin-bottom: 16px;
+}
+
+.todo-info {
+  flex: 1 1 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 16px;
 }
 
 .todo-data-type {
