--- a/src/style.css
+++ b/src/style.css
@@ -145,3 +145,23 @@ footer {
   height: 50px;
   width: 50px;
 }
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+}
+
+.active {
+  display: block;
+}
+
+.inactive {
+  display: none;
+}
