--- a/src/style.css
+++ b/src/style.css
@@ -165,3 +165,34 @@ footer {
 .inactive {
   display: none;
 }
+
+.todo-form-container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-card {
+  width: 500px;
+  height: auto;
+  padding: 25px;
+  border-radius: 10px;
+  background-color: white;
+}
+
+form {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+.submit-button-container {
+  margin: 0 auto;
+}
+
+.submit-button-container input {
+  padding: 8px 16px;
+}
