--- a/src/style.css
+++ b/src/style.css
@@ -149,6 +149,7 @@ footer {
 
 .overlay {
   position: fixed;
+  display: none;
   width: 100%;
   height: 100%;
   top: 0;
@@ -159,15 +160,14 @@ footer {
   z-index: 2;
 }
 
-.active {
+.project-form-container.active,
+.overlay.active,
+.todo-form-container.active {
   display: block;
 }
 
-.inactive {
-  display: none;
-}
-
 .todo-form-container {
+  display: none;
   height: 100%;
 }
 
@@ -235,5 +235,6 @@ textarea {
 }
 
 .project-form-container {
+  display: none;
   height: 100%;
 }
