--- a/src/style.css
+++ b/src/style.css
@@ -160,15 +160,8 @@ footer {
   z-index: 2;
 }
 
-.project-form-container.active,
-.overlay.active,
-.todo-form-container.active {
+.overlay.active {
   display: block;
-}
-
-.todo-form-container {
-  display: none;
-  height: 100%;
 }
 
 .form-flex-container {
@@ -186,7 +179,7 @@ footer {
   background-color: white;
 }
 
-form {
+form.active {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -194,11 +187,9 @@ form {
   gap: 16px;
 }
 
-.submit-button-container {
+.submit-button {
+  display: block;
   margin: 0 auto;
-}
-
-.submit-button-container input {
   padding: 8px 16px;
 }
 
@@ -234,11 +225,10 @@ textarea {
   resize: none;
 }
 
-.project-form-container {
+.template {
   display: none;
-  height: 100%;
 }
 
-.template {
+form {
   display: none;
 }
